test_data/unit/stack/test_app_vpc/test_app_vpc_stack_actual/production/expected.json
{
  "Resources": {
    "NevergreenProductionAppVpcAppVpc5A7B00F7": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.57.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ]
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1Subnet5A07D1A5": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTable31CA5BA6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTableAssociation2878195D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTable31CA5BA6"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1Subnet5A07D1A5"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1DefaultRoute3B58F78C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenProductionAppVpcAppVpcIGWC10C71B5"
        },
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTable31CA5BA6"
        }
      },
      "DependsOn": [
        "NevergreenProductionAppVpcAppVpcVPCGW13F6B2A9"
      ]
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1EIPDA8B4909": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet1"
          }
        ]
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1NATGateway4AB83773": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1EIPDA8B4909",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1Subnet5A07D1A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1DefaultRoute3B58F78C",
        "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTableAssociation2878195D"
      ]
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2Subnet5AFA37D0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTable4D2CCD11": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTableAssociationC8E6895C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTable4D2CCD11"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2Subnet5AFA37D0"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2DefaultRouteD531BA23": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenProductionAppVpcAppVpcIGWC10C71B5"
        },
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTable4D2CCD11"
        }
      },
      "DependsOn": [
        "NevergreenProductionAppVpcAppVpcVPCGW13F6B2A9"
      ]
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2EIPB5222391": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet2"
          }
        ]
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2NATGatewayF5FF3905": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2EIPB5222391",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2Subnet5AFA37D0"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_publicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2DefaultRouteD531BA23",
        "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTableAssociationC8E6895C"
      ]
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1RouteTable2E7FF861": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1RouteTableAssociationD7A7ED0A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1RouteTable2E7FF861"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1DefaultRoute249B0F88": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1NATGateway4AB83773"
        },
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1RouteTable2E7FF861"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2RouteTable115C6A95": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2RouteTableAssociation0EA89C89": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2RouteTable115C6A95"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2DefaultRoute20D5292E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2NATGatewayF5FF3905"
        },
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2RouteTable115C6A95"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1Subnet297827F2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1RouteTable31A9802E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1RouteTableAssociation0911439B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1RouteTable31A9802E"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1Subnet297827F2"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2Subnet77BFFB48": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-production-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2RouteTableE02D2544": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/nevergreen-production-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2RouteTableAssociationF3A5FA20": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2RouteTableE02D2544"
        },
        "SubnetId": {
          "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2Subnet77BFFB48"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcIGWC10C71B5": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ]
      }
    },
    "NevergreenProductionAppVpcAppVpcVPCGW13F6B2A9": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NevergreenProductionAppVpcAppVpcIGWC10C71B5"
        },
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcEC2SecurityGroup819C4AA1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/EC2/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcEC2C303333A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcEC2SecurityGroup819C4AA1",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcEC2MESSAGESSecurityGroup31119B49": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/EC2_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcEC2MESSAGESA63C0274": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcEC2MESSAGESSecurityGroup31119B49",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2messages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSSMSecurityGroup3746D719": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/SSM/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSSM0192FA69": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcSSMSecurityGroup3746D719",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSSMMESSAGESSecurityGroup056E30B8": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/SSM_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSSMMESSAGES96ED08F2": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcSSMMESSAGESSecurityGroup056E30B8",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssmmessages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSECRETSMANAGERSecurityGroupD6DF8811": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/SECRETS_MANAGER/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcSECRETSMANAGER46F213F2": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcSECRETSMANAGERSecurityGroupD6DF8811",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECSAGENTSecurityGroup2D57C0C9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/ECS_AGENT/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECSAGENT46BE0FD8": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcECSAGENTSecurityGroup2D57C0C9",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECSSecurityGroupBFD12478": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/ECS/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECS12B62C88": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcECSSecurityGroupBFD12478",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECSTELEMETRYSecurityGroup77CEB32A": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenProductionAppVpcStack/NevergreenProductionAppVpcAppVpc/ECS_TELEMETRY/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenProductionAppVpcAppVpc5A7B00F7",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenProductionAppVpcAppVpc5A7B00F7",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcECSTELEMETRY4247D71A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenProductionAppVpcAppVpcECSTELEMETRYSecurityGroup77CEB32A",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1SubnetDA631D88"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2Subnet848550A9"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcAppVpcS3525D9671": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet1RouteTable2E7FF861"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcprivateSubnet2RouteTable115C6A95"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet1RouteTable31CA5BA6"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcpublicSubnet2RouteTable4D2CCD11"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet1RouteTable31A9802E"
          },
          {
            "Ref": "NevergreenProductionAppVpcAppVpcnevergreenproductionappvpcisolatedSubnet2RouteTableE02D2544"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
        }
      }
    },
    "NevergreenProductionAppVpcPrivateR53Zone7516725B": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "production.internal.production.daisy.com.",
        "VPCs": [
          {
            "VPCId": {
              "Ref": "NevergreenProductionAppVpcAppVpc5A7B00F7"
            },
            "VPCRegion": {
              "Ref": "AWS::Region"
            }
          }
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
